--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 <div class="iframe-one">
                     <iframe id="ytplayer-one" type="text/html" width="640" height="360"
                         src="https://www.youtube.com/embed/qQZILMyW88o?autoplay=1&mute=1&enablejsapi=1&controls=0&rel=0"
-                        frameborder="0"></iframe>
+                        frameborder="0" allow="autoplay"></iframe>
                 </div>
                 <div class="iframe-two">
                     <iframe id="ytplayer-two" type="text/html" width="640" height="360"
                         src="https://www.youtube.com/embed/JJqXeRFsLjE?autoplay=1&mute=1&enablejsapi=1&controls=0&rel=0"
-                        frameborder="0"></iframe>
+                        frameborder="0" allow="autoplay"></iframe>
                 </div>
             </div>
         </div>
