--- a/index.html
+++ b/index.html
@@ -17,14 +17,10 @@
         <div class="item-b">
             <div class="iframe-wrapper">
                 <div class="iframe-one">
-                    <iframe id="ytplayer-one" type="text/html" width="640" height="360"
-                        src="https://www.youtube.com/embed/qQZILMyW88o?autoplay=1&mute=1&enablejsapi=1&controls=0&rel=0"
-                        frameborder="0" allow="autoplay"></iframe>
+                    <div id="playerOne"></div>
                 </div>
                 <div class="iframe-two">
-                    <iframe id="ytplayer-two" type="text/html" width="640" height="360"
-                        src="https://www.youtube.com/embed/JJqXeRFsLjE?autoplay=1&mute=1&enablejsapi=1&controls=0&rel=0"
-                        frameborder="0" allow="autoplay"></iframe>
+                    <div id="playerTwo"></div>
                 </div>
             </div>
         </div>
