--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test tone-JS</title>
     <link rel="stylesheet" href="CSS/main.css">
-    <script src="JS/Modules/Tone.js" type="text/javascript"></script>
-    <script src="JS/main-tone.js" type="text/javascript"></script>
+    <script src="scripts/Tone.js"></script>
+    <script src="scripts/main.js"></script>
 </head>
 
 <body onload="setup()">
