Created the weatherLookup AWS lambada function and added a call to it in main.js

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <title>Weather Synth</title>
     <link rel="stylesheet" href="CSS/main.css">
     <script src="scripts/Tone.js"></script>
-    <script src="scripts/main.js"></script>
 </head>
 
-<body onload="setup()">
+<body>
     <main class="container">
         <div class="item-a"></div>
         <div class="item-b">
@@ -21,6 +20,9 @@
                 </div>
                 <div class="iframe-two">
                     <div id="playerTwo"></div>
+                </div>
+                <div class="iframe-three">
+                    <div id="playerThree"></div>
                 </div>
             </div>
         </div>
@@ -32,6 +34,7 @@
 </body>
 
 <footer>
+    <script src="scripts/main.js"></script>
 </footer>
 
 </html>
