--- a/weatherSynth.html
+++ b/weatherSynth.html
@@ -29,6 +29,7 @@
                 </div>
             </div>
         </div>
+        <!-- <img src="weather-synth.svg" class="svg"></img> -->
         <!-- <div class="item-c">
         </div> -->
     </main>
