--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <main class="container">
         <div class="item-b">
-            <h1 id="landing">Welcome to {piece name}, a project that uses your location (if you will allow) to check the
-                weather where you are and tune my drone synth and video faders. Meditate, sit for a while, then be on
+            <h1 id="landing">Welcome to <b>Weather Drone</b>, a project that uses your location (if you will allow) to check the
+                weather where you are and tune a drone synth and calibrate some video faders. Meditate, sit for a while, chilax, then be on
                 your way :)
-                <a onclick="takeMeToYourLeader()">Click here to continue and send your location</a></h1>
+                <a onclick="takeMeToYourLeader()">Click here to continue and agree to use your location (its not stored)</a></h1>
         </div>
         <div class="item-c">
         </div>
