--- a/index.html
+++ b/index.html
@@ -6,21 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Synth</title>
-    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/landing.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Lexend:wght@200&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <main class="container">
-        <div class="item-b">
-            <h1 id="landing">Welcome to <b>Weather Drone</b>, a project that uses your location (if you will allow) to check the
-                weather where you are and tune a drone synth and calibrate some video faders. Meditate, sit for a while, chilax, then be on
-                your way :)
-                <a onclick="takeMeToYourLeader()">Click here to continue and agree to use your location (its not stored)</a></h1>
+        <div class="header-one">
+            <h1 id="landing">Welcome to <b>Weather Drone</b></h1>
         </div>
-        <div class="item-c">
+        <div class="header-two">
+            <h1 id="landing">This project uses your location (if you allow) to check your
+                local weather and use the data to tune a drone synth and calibrate some video faders.</h1>
+        </div>
+        <div class="header-three">
+            <h1 id="landing">Meditate, sit for a while, chilax, then be on your way :) If you wish to read more check this <a href="about.html">page</a></h1>
+        </div>
+        <div class="header-four">
+            <h1 id="landing"><a onclick="takeMeToYourLeader()">Click here to continue and agree to use your location
+                    (its not stored)</a></h1>
         </div>
     </main>
 </body>
