Tweaked about table

--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
                   <th>Description</th>
                 </tr>
                 <tr>
-                  <td>Current cloudiness 0-100%</td>
-                  <td>Max video opacity</td>
+                  <td>Current cloudiness 0-100% and daily cloudiness</td>
+                  <td>Max opacity</td>
                   <td>Cloudiness controls how vibrant the videos are</td>
                 </tr>
                 <tr>
