Changed project name from weather synth/drone to Weather Hum

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Synth</title>
+    <title>Weather Hum</title>
     <link rel="stylesheet" href="CSS/normalise.css">
     <link rel="stylesheet" href="CSS/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,9 +39,9 @@
                   <td>Cloudiness controls how vibrant the videos are</td>
                 </tr>
                 <tr>
-                  <td>Current wind speed</td>
-                  <td>Auto filter LFO speed</td>
-                  <td>The faster the current wind the faster the filters oscillation</td>
+                  <td>Current wind speed and future wind speed</td>
+                  <td>Auto filter LFO speeds</td>
+                  <td>The faster the current and future wind the faster the filters oscillate</td>
                 </tr>
                 <tr>
                     <td>Current rin in mm</td>
