--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Synth</title>
+    <title>Weather Hum</title>
     <link rel="stylesheet" href="CSS/normalise.css">
     <link rel="stylesheet" href="CSS/landing.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,17 +17,17 @@
 <body>
     <main class="container">
         <div class="header-one">
-            <h1 id="landing">Welcome to <b>Weather Drone</b></h1>
+            <h1 class="landing">Welcome to Weather Hum</h1>
         </div>
         <div class="header-two">
-            <h1 id="landing">This project uses your location (if you allow) to check your
+            <h1 class="landing">This project uses your location (if you allow) to check your
                 local weather and use the data to tune a drone synth and calibrate some video faders.</h1>
         </div>
         <div class="header-three">
-            <h1 id="landing">Meditate, sit for a while, chilax, then be on your way :) If you wish to read more check this <a href="about.html">page</a></h1>
+            <h1 class="landing">Meditate, sit for a while, chilax, then be on your way :) If you wish to read more check this <a href="about.html">page</a></h1>
         </div>
         <div class="header-four">
-            <h1 id="landing"><a onclick="takeMeToYourLeader()">Click here to continue and agree to use your location
+            <h1 class="landing"><a onclick="takeMeToYourLeader()">Click here to continue and agree to use your location
                     (its not stored)</a></h1>
         </div>
     </main>
