Added a feedback form in the about page

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                 powered by YouTube's iframe API and some JavaScript to fade the videos</h1>
         </div>
         <div class="header-three">
-            <h1 id="landing">Below is a mapping of the weather data to the parts of the piece</h1>
+            <h1 id="landing">If you would like to share your thoughts please fill out this <a href="https://forms.gle/S8EYyf9D1ArBHdwj7" target="_blank">form</a>. Below is a mapping of the weather data to the parts of the piece</h1>
         </div>
         <div class="header-four">
             <table>
