Added a loading and click to begin, updated the landing page text and added a warning for mobile users

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="CSS/landing.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Lexend:wght@200&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200&display=swap"
         rel="stylesheet">
 </head>
 
@@ -24,7 +24,7 @@
                 local weather and use the data to tune a drone synth and calibrate some video faders.</h1>
         </div>
         <div class="header-three">
-            <h1 class="landing">Meditate, sit for a while, chilax, then be on your way :) If you wish to read more check this <a href="about.html">page</a></h1>
+            <h1 class="landing">Sit for a while, then be on your way :) If you wish to read more check this <a href="about.html">page</a>. A word of warning for mobile users, this is a data intensive piece and will drain your mobile battery and use up a fair bit of mobile data. </h1>
         </div>
         <div class="header-four">
             <h1 class="landing"><a onclick="takeMeToYourLeader()">Click here to continue and agree to use your location
