--- a/weatherSynth.html
+++ b/weatherSynth.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html  id="wholePage" lang="en">
-    
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>WeatherHum</title>
-        <link rel="stylesheet" href="CSS/normalise.css">
-        <link rel="stylesheet" href="CSS/main.css">
-        <script src="scripts/Tone.js"></script>
-        <script src="scripts/weatherLookup.js"></script>
+<html id="wholePage" lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WeatherHum</title>
+    <link rel="stylesheet" href="CSS/normalise.css">
+    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Lexend:wght@200&display=swap"
+        rel="stylesheet">
+    <script src="scripts/Tone.js"></script>
+    <script src="scripts/weatherLookup.js"></script>
 </head>
 
 <body>
@@ -17,6 +21,9 @@
         <div class="item-b">
             <div class="iframe-wrapper">
                 <div id="crop" class="cropper"></div>
+                <div id="pressToStartDiv">
+                    <h1 id="waitingText">Fetching videos...</h1>
+                </div>
                 <div id="video1" class="iframe-one">
                     <div id="playerOne"></div>
                 </div>
