added feels like daily temp controlling detune of oscillators

--- a/about.html
+++ b/about.html
@@ -59,6 +59,11 @@
                     <td>Selected notes for the oscillators</td>
                     <td>An array of notes in the G-flat pentatonic scale and an array of octaves are used with the max and min temperature for the first 4 days forecast, each temperature is wrapped to 5 using the modulo operator.</td>
                 </tr>
+                <tr>
+                    <td>Day 1 to 4 daytime feels like temperature</td>
+                    <td>Controls how detuned the oscillators are</td>
+                    <td>The temperature is scaled by an order of magnitude and two of the oscillators have the temperature value inverted so to provide a better detuning effect sonically</td>
+                </tr>
             </table>
         </div>
     </main>
