Added moon phase to control the oscillators phase

--- a/about.html
+++ b/about.html
@@ -64,6 +64,11 @@
                     <td>Controls how detuned the oscillators are</td>
                     <td>The temperature is scaled by an order of magnitude and two of the oscillators have the temperature value inverted so to provide a better detuning effect sonically</td>
                 </tr>
+                <tr>
+                    <td>Day 1, 2, 4 and 7 moon phase</td>
+                    <td>Controls the phase position of the oscillators</td>
+                    <td>Moon phase directly corresponds to oscillator phase, should create some interesting phasing effect.</td>
+                </tr>
             </table>
         </div>
     </main>
