Added humidity control over the volume of the oscillators

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         </div>
         <div class="header-two">
             <h1 id="landing">The synth is powered by <a href="https://tonejs.github.io/">Tone.js</a> and the visuals
-                powered by YouTube's iframe API and some JavaScript to fade the videos</h1>
+                powered by YouTube's iframe API and some JavaScript to fade the videos. The weather API used is <a href="https://openweathermap.org/api/one-call-api"></a>.</h1>
         </div>
         <div class="header-three">
             <h1 id="landing">If you would like to share your thoughts please fill out this <a href="https://forms.gle/S8EYyf9D1ArBHdwj7" target="_blank">form</a>. Below is a mapping of the weather data to the parts of the piece</h1>
@@ -68,6 +68,11 @@
                     <td>Day 1, 2, 4 and 7 moon phase</td>
                     <td>Controls the phase position of the oscillators</td>
                     <td>Moon phase directly corresponds to oscillator phase, should create some interesting phasing effect.</td>
+                </tr>
+                <tr>
+                    <td>Day 1, 2, 3 and 4 humidity %</td>
+                    <td>Controls the volume in dB of the oscillators</td>
+                    <td>humidity % controls how loud the oscillators are between -30dB and -20dB</td>
                 </tr>
             </table>
         </div>
