--- a/about.html
+++ b/about.html
@@ -18,11 +18,11 @@
     <main class="container">
         <div class="header-one">
             <h1 id="back"><a href="index.html"><<<<<<<<</a></h1> 
-            <h1 id="landing">Created by <a href="https://linktr.ee/henry.james">Henry James</a></h1>
+            <h1 id="landing">Created by <a href="https://linktr.ee/henry.james" target="_blank">Henry James</a></h1>
         </div>
         <div class="header-two">
             <h1 id="landing">The synth is powered by <a href="https://tonejs.github.io/">Tone.js</a> and the visuals
-                powered by YouTube's iframe API and some JavaScript to fade the videos. The weather API used is <a href="https://openweathermap.org/api/one-call-api">Open Weather</a>.</h1>
+                powered by YouTube's iframe API and some JavaScript to fade the videos. The weather API used is <a href="https://openweathermap.org/api/one-call-api" target="_blank">Open Weather</a>.</h1>
         </div>
         <div class="header-three">
             <h1 id="landing">If you would like to share your thoughts please fill out this <a href="https://forms.gle/S8EYyf9D1ArBHdwj7" target="_blank">form</a>. Below is a mapping of the weather data to the parts of the piece</h1>
