--- a/about.html
+++ b/about.html
@@ -71,8 +71,13 @@
                 </tr>
                 <tr>
                     <td>Day 1, 2, 3 and 4 humidity %</td>
-                    <td>Controls the volume in dB of the oscillators</td>
-                    <td>Humidity % controls how loud the oscillators are between -30dB and -20dB</td>
+                    <td>Controls the base frequency of the auto filters</td>
+                    <td>Humidity % controls where the auto filters begin oscillating at</td>
+                </tr>
+                <tr>
+                    <td>Video opacity</td>
+                    <td>Controls the volume of the oscillators</td>
+                    <td>Grants some movement to the piece and syncs up the videos with each oscillator</td>
                 </tr>
             </table>
         </div>
