Added video opacity combination 1 and 2 controlling the pitch shift feedback level

--- a/about.html
+++ b/about.html
@@ -79,6 +79,11 @@
                     <td>Controls the volume of the oscillators</td>
                     <td>Grants some movement to the piece and syncs up the videos with each oscillator</td>
                 </tr>
+                <tr>
+                    <td>Video opacity combination videos 1 + 2</td>
+                    <td>Controls the pitch shift feedback level</td>
+                    <td>Creates a swell as videos 1 and 2 take precedence together in the piece</td>
+                </tr>
             </table>
         </div>
     </main>
