YouTube videos fade with oscillators and seperated out the usefulFunctions.js and updated about

--- a/about.html
+++ b/about.html
@@ -51,8 +51,8 @@
                 </tr>
                 <tr>
                     <td>Current dew point</td>
-                    <td>The ping pong delay's delay time</td>
-                    <td>This will have a metallic effect on the audio the lower the dew point</td>
+                    <td>The reverbs decay time</td>
+                    <td>Running the whole piece through reverb should take off any harsh edges the higher the dew point the longer the decay time</td>
                 </tr>
                 <tr>
                     <td>Daily min and max temperature</td>
@@ -75,8 +75,8 @@
                     <td>Humidity % controls where the auto filters begin oscillating at</td>
                 </tr>
                 <tr>
-                    <td>Video opacity</td>
-                    <td>Controls the volume of the oscillators</td>
+                    <td>Video opacity (connected to cloudiness)</td>
+                    <td>Controls the volume of the oscillators and YouTube videos</td>
                     <td>Grants some movement to the piece and syncs up the videos with each oscillator</td>
                 </tr>
                 <tr>
