--- a/weatherSynth.html
+++ b/weatherSynth.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Lexend:wght@200&display=swap"
-        rel="stylesheet">
-    <script src="scripts/Tone.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Lexend:wght@200&display=swap" rel="stylesheet">
+    <script src="scripts/usefulFunctions.js"></script>
     <script src="scripts/weatherLookup.js"></script>
+    <script src="scripts/Tone.js"></script>
+
 </head>
 
 <body>
