Added a second delay

--- a/about.html
+++ b/about.html
@@ -55,9 +55,9 @@
                     <td>The more rain per mm the louder the pink noise becomes</td>
                 </tr>
                 <tr>
-                    <td>Current dew point</td>
-                    <td>The reverbs decay time</td>
-                    <td>Running the whole piece through reverb should take off any harsh edges the higher the dew point the longer the decay time</td>
+                    <td>Current dew point and day 2 dew point</td>
+                    <td>Reverb 1 and 2 decay time</td>
+                    <td>Running the whole piece through two reverb should take off any harsh edges the higher the dew point the longer the decay time</td>
                 </tr>
                 <tr>
                     <td>Daily min and max temperature</td>
