Added audio routing diagram

--- a/about.html
+++ b/about.html
@@ -28,6 +28,10 @@
             <h1 id="landing">If you would like to share your thoughts please <a href="https://forms.gle/S8EYyf9D1ArBHdwj7" target="_blank"><b>fill out this form</b></a>. Below is a mapping of the weather data to the parts of the piece</h1>
         </div>
         <div class="header-four">
+            <h1 id="landing">Audio routing diagram</h1>
+            <img src="media/weatherHum diagram.svg" alt="Diagram showing the connections between the audio objects">
+        </div>
+        <div class="header-five">
             <table>
                 <tr>
                     <th><b>Weather data</b></th>
