changed svg into object tag

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         </div>
         <div class="header-four">
             <h1 id="landing">Audio routing diagram</h1>
-            <img src="media/weatherHum diagram.svg" alt="Diagram showing the connections between the audio objects">
+            <object id="diagramAudio" data="media/weatherHumAudioDiagram.svg" type="image/svg+xml"></object>
         </div>
         <div class="header-five">
             <table>
