--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherHum</title>
     <link rel="stylesheet" href="CSS/normalise.css">
+    <link rel="stylesheet" href="CSS/fadein.css">/
     <link rel="stylesheet" href="CSS/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
