Created more notes in the arrays and scales in the array, updated about and landing

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                 <tr>
                     <td>Daily min and max temperature</td>
                     <td>Selected notes for the oscillators</td>
-                    <td>An array of notes in the G-flat pentatonic scale and an array of octaves are used with the max and min temperature for the first 4 days forecast, each temperature is wrapped to 5 using the modulo operator.</td>
+                    <td>An array of 11 notes in the G-flat pentatonic scale and an array of 11 octaves are used with the max and min temperature for the first 4 days forecast, each temperature is wrapped to 11 using the modulo operator.</td>
                 </tr>
                 <tr>
                     <td>Day 1-4 max temperature</td>
