--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 local weather and use the data to tune a drone synth and calibrate some video faders.</h1>
         </div>
         <div class="header-three">
-            <h1 class="landing">Sit for a while, then be on your way :) If you wish to read more check this <a href="about.html"><b>page</b></a>. A word of warning for mobile users, this is a data intensive piece and will drain your mobile battery and use up a fair bit of mobile data. </h1>
+            <h1 class="landing">Sit for a while, then be on your way :) If you wish to read more check this <a href="about.html"><b>page</b></a>. If you are on a mobile device, two videos will play, if not on a mobile device four videos will play.</h1>
         </div>
         <div class="header-four">
             <h1 class="landing"><a onclick="takeMeToYourLeader()">Click here to continue and agree to use your location
