videos now fullscreen even on mobile

--- a/weatherSynth.html
+++ b/weatherSynth.html
@@ -21,20 +21,20 @@
     <main class="container">
         <div class="item-b">
             <div class="iframe-wrapper">
-                <div id="crop" class="cropper"></div>
+                <!-- <div id="crop" class="cropper"></div> -->
                 <div id="pressToStartDiv">
                     <h1 id="waitingText">Fetching videos...</h1>
                 </div>
-                <div id="video1" class="iframe-one">
+                <div id="video1" class="iframe-one video-background">
                     <div id="playerOne"></div>
                 </div>
-                <div id="video2" class="iframe-two">
+                <div id="video2" class="iframe-two video-background">
                     <div id="playerTwo"></div>
                 </div>
-                <div id="video3" class="iframe-three">
+                <div id="video3" class="iframe-three video-background">
                     <div id="playerThree"></div>
                 </div>
-                <div id="video4" class="iframe-four">
+                <div id="video4" class="iframe-four video-background">
                     <div id="playerFour"></div>
                 </div>
             </div>
