--- a/index.html
+++ b/index.html
@@ -18,16 +18,22 @@
 <body>
     <main class="container">
         <div class="header-one">
-            <h1 class="landing">Welcome to WeatherHum</h1>
+            <h1 class="landing">Welcome to WeatherHum.art</h1>
         </div>
         <div class="header-two">
             <h1 class="landing">This project uses your location (if you allow) to check your
                 local weather and use the data to tune a drone synth and calibrate some video faders.</h1>
         </div>
         <div class="header-three">
-            <h1 class="landing">Sit for a while, then be on your way :) If you wish to read more check this <a href="about.html"><b>page</b></a>. If you are on a mobile device, two videos will play, if not on a mobile device four videos will play.</h1>
+            <h1 class="landing">Sit for a while, then be on your way :)</h1>
         </div>
         <div class="header-four">
+            <h1 class="landing">If you wish to read more tap <a href="about.html"><b>this link</b></a>.</h1>
+        </div>
+        <div class="header-five">
+            <h1 class="landing">This project was made as part of my masters, any feedback <a href="https://docs.google.com/forms/d/e/1FAIpQLSeBBbk0n1kyCoeyok9QT501QH3_7oHnA1XueQl1Db_DvIWH7w/viewform" target="_blank"><b>via this form</b></a> is greatly appreciated.</h1>
+        </div>
+        <div class="header-six">
             <h1 class="landing"><a onclick="takeMeToYourLeader()">Click here to continue and agree to use your location
                     (its not stored)</a></h1>
         </div>
