Cleaned up the landing page and about section focusing on readability and user feedback

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         </div>
         <div class="header-two">
             <h1 class="landing">The synth is powered by <a href="https://tonejs.github.io/"><b>Tone.js</b></a> and the visuals
-                powered by <a href="https://developers.google.com/youtube/iframe_api_reference" target="_blank"><b>YouTube's iframe API</b></a> and some JavaScript to fade the videos. The weather API used is <a href="https://openweathermap.org/api/one-call-api" target="_blank"><b>Open Weather</b></a>.</h1>
+                powered by <a href="https://developers.google.com/youtube/iframe_api_reference" target="_blank"><b>YouTube's iframe API</b></a> and some JavaScript to fade the videos. The weather API used is <a href="https://openweathermap.org/api/one-call-api" target="_blank"><b>Open Weather</b></a>. Scroll down to see the weather data mapping table.</h1>
         </div>
         <div class="header-three">
             <h1 class="landing">If you would like to share your thoughts please <a href="https://forms.gle/S8EYyf9D1ArBHdwj7" target="_blank"><b>fill out this form</b></a>. Below is a mapping of the weather data to the parts of the piece</h1>
