Updated details added new diagram

--- a/about.html
+++ b/about.html
@@ -37,13 +37,13 @@
                 </tr>
                 <tr>
                     <td>Day 1-4 cloudiness (%)</td>
-                    <td>Video 1-4 max opacity</td>
-                    <td>Cloudiness controls how vibrant the videos are, it also controls other audio parameters below</td>
+                    <td>Video 1-4 max opacity and volume. As well as volume of the oscillators</td>
+                    <td>Cloudiness controls how vibrant the videos are and how loud the piece can be</td>
                 </tr>
                 <tr>
-                    <td>Day 1-4 wind speed</td>
-                    <td>Auto filter LFO speeds</td>
-                    <td>The faster the current and future wind the faster the filters oscillate</td>
+                    <td>Current wind speed and day 1-3 wind speed</td>
+                    <td>Auto filter LFO speeds, phaser frequency and the frequency of the auto panners</td>
+                    <td>The faster the current and future wind the faster the filters oscillate, phaser phases and panners pan</td>
                 </tr>
                 <tr>
                     <td>Day 1-4 humidity (%)</td>
@@ -75,20 +75,9 @@
                     <td>Controls the phase position of the oscillators</td>
                     <td>Moon phase directly corresponds to oscillator phase, should create some interesting phasing effect.</td>
                 </tr>
-                <tr>
-                    <td>Video opacity (connected to cloudiness)</td>
-                    <td>Controls the volume of the oscillators and YouTube videos</td>
-                    <td>Grants some movement to the piece and syncs up the videos with each oscillator</td>
-                </tr>
-                <tr>
-                    <td>Video opacity combination videos 1 + 2</td>
-                    <td>Controls the pitch shift feedback level</td>
-                    <td>Creates a swell as videos 1 and 2 take precedence together in the piece</td>
-                </tr>
             </table>
         </div>
         <div class="header-five">
-            <h1 class="landing">Audio routing diagram</h1>
             <object id="diagramAudio" data="media/weatherHumAudioDiagram.svg" type="image/svg+xml"></object>
         </div>
     </main>
