added comments and made the click through to piece link bold

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <h1 class="landing">This project was made as part of my masters, any feedback <a href="https://docs.google.com/forms/d/e/1FAIpQLSeBBbk0n1kyCoeyok9QT501QH3_7oHnA1XueQl1Db_DvIWH7w/viewform" target="_blank"><b>via this form</b></a> is greatly appreciated.</h1>
         </div>
         <div class="header-six">
-            <h1 class="landing"><a onclick="takeMeToYourLeader()">Click here to continue and agree to use your location
-                    (its not stored)</a></h1>
+            <h1 class="landing"><a onclick="takeMeToYourLeader()"><b>Click here to continue and agree to use your location
+                    (its not stored)</b></a></h1>
         </div>
     </main>
 </body>
